assets/css/custom.css
header {
    padding: 0;
}

footer {
    padding: 40px 0;
}

footer .footer-nav {
    border: none;
}

a {
    color: #e08b1d;
}

.main-full {
    max-width: 100%;
}

/* navbar */
.navbar-collapse {
    text-align: center;
}

.navbar-center {
    display: inline-block;
    float: none;
}

.page-home .navbar {
    background: none;
    border: none;
}

.page-home .logo {
    padding: 150px 0;
}

.navbar,
.navbar:hover {
    padding: 0;
    margin: 0;
    background-color: transparent;
}

.navbar-nav {
    padding: 35px 0;
}

.navbar-header {
    position: absolute;
    top: 0;
    bottom: 0;
}

.navbar-brand {
    padding: 0;
    height: 100%;
    width: auto;
}

.navbar-brand > img {
    height: 100%;
    width: auto;
    padding: 5px;
}

.navbar a {
    font-family: 'Montserrat', sans-serif;
    text-transform: uppercase;
    font-weight: bold;
    color: #fff !important;
}

.navbar a:hover {
    color: #e08b1d !important;
}

/* home blog listing */
.blog-post .post-header h2 {
    min-height: initial;
}

.page-home .blog-post img {
    height: 400px;
    width: 100%;
    object-fit: cover;
}

/* photo listing */
.photo {
    height: 300px;
}

.page-photos .photo:first-of-type,
.page-home .photo:first-of-type {
    height: 600px;
}

.photo img,
.fluidbox__wrap {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

/* blog listing */
.blog-post.wide-post .post-cover {
    bottom: 0;
}

.blog-post.wide-post .post-cover img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.photo:hover {
    background-color: #e08b1d;
}

.photo:hover img {
    opacity: 0.5;
    transition: 1s;
}

/* post detail */
.blog-post .post-header h1 {
    text-transform: uppercase;
    font-weight: 700;
    margin: 0 0 6px;
}

.blog-post.blog-post-normal .post-cover img {
    max-height: 700px;
    width: 100%;
    object-fit: cover;
}

.blog-post.blog-post-high .post-cover {
    float: right;
    margin-bottom: 30px;
}

.blog-post .map-location {
    margin: 0 -100px 60px;
}

.load-more-link {
    margin: 30px auto 50px;
}

.load-more-link i {
    margin: 0;
    color: inherit;
}

span.load-more-link {
    color: #e08b1d;
}

span.load-more-link.inactive {
    color: #ccc;
}

.post-footer .socials-post li a i.fa-google-plus,
.main-sidebar .widget-about .socials-about li a i.fa-google-plus {
    background: #d34836;
}

.post-content .also-like .also-like-box img {
    height: 100%;
    object-fit: cover;
}

.blog-post .ad {
    margin: 20px 0;
}

.blog-post .post-header h5 {
    color: inherit;
}

img.pano {
    width: 100%;
}

/* sidebar */
.sidebar .photo {
    max-height: 150px;
}

.sidebar h1,
.sidebar h2,
.sidebar h3,
.sidebar h4,
.sidebar h5,
.sidebar h6 {
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 3px;
    padding-top: 30px;
}

.sidebar .load-more-link {
    margin-bottom: 0;
}

/* about */
.contact {
    margin-top: 60px;
}

.contact textarea,
.contact input[type="text"],
.contact input[type="email"] {
    width: 100%;
    padding: 10px 0;
    margin-bottom: 30px;
    border-bottom: 2px solid rgba(81, 81, 81, 0.2);
}

.contact textarea:focus,
.contact input[type="text"]:focus,
.contact input[type="email"]:focus {
    border-bottom: 2px solid transparent;
}

.contact input[type="submit"] {
    text-align: center;
    text-transform: uppercase;
    color: #e08b1d;
    font-size: 16px;
    background: none;
    line-height: 1.5em;
    letter-spacing: 2px;
    padding: 10px 30px;
    border: 3px solid #fff;
}

.contact input[type="submit"]:hover {
    border: 3px solid #e08b1d;
}

.page-about h1,
.page-about h2,
.page-about h3,
.page-about h4,
.page-about h5,
.page-about h6 {
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 3px;
}

.page-about .social-media {
    padding-top: 10px;
}

.page-about .social-media h5 {
    text-align: left;
    padding: 4px 0;
}

.page-about #map {
    height: 700px;
}

